--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
 appJar==0.93.0
+dj-database-url==0.5.0
 Django==2.1.5
 djangorestframework==3.9.1
+gunicorn==19.9.0
+psycopg2==2.7.6.1
 Pygments==2.3.1
 pytz==2018.9
+whitenoise==4.1.2
